# acli

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  acli.lock.json  pixi.toml
.cursor/hooks/state/: continual-learning.json
.github/workflows/: build-binaries.yml
examples/: hevy-openapi.json  whoop-openapi.json
src/: app_config.rs  cli.rs  colors.rs  config.rs  execute.rs  lib.rs  lock.rs  main.rs  spec.rs
