[package]
name = "acli"
version = "0.1.0"
edition = "2021"
description = "Application Command Line Interface runtime for OpenAPI JSON specs loaded from env vars"
license = "MIT"

[dependencies]
anyhow = "1"
anstyle = "1"
clap = { version = "4.6", features = ["cargo", "color", "env", "help", "string", "suggestions", "usage", "wrap_help"] }
clap_complete = "4.6"
figlet-rs = "1"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
