[package]
name = "acli"
version = "0.1.0"
edition = "2021"
description = "Application Command Line Interface runtime for OpenAPI JSON specs loaded from env vars"
license = "MIT"
homepage = "https://github.com/thehumanworks/acli"
repository = "https://github.com/thehumanworks/acli"
readme = "README.md"

[lib]
name = "acli"
path = "src/lib.rs"

[[bin]]
name = "acli"
path = "src/main.rs"

[dependencies]
anyhow = "1"
anstyle = "1"
clap = { version = "=4.5.28", features = ["cargo", "color", "derive", "env", "help", "string", "suggestions", "usage", "wrap_help"] }
clap_complete = { version = "=4.5.48" }
figlet-rs = "1"
keyring = "3"
hyper-rustls = "=0.27.3"
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["preserve_order"] }
url = "=2.4.1"

[dev-dependencies]
tempfile = "3"
